--- a/.github/workflows/dotnet3.yml
+++ b/.github/workflows/dotnet3.yml
@@ -5,9 +5,9 @@ name: .NET
 
 on:
   push:
-    branches: [ "team5Bootcam" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "team5Bootcam" ]
+    branches: [ "main" ]
 
 jobs:
   build:
