--- a/.github/workflows/dotnet2.yml
+++ b/.github/workflows/dotnet2.yml
@@ -21,7 +21,9 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore PlaywrightDemo.sln 
+      run: dotnet restore PlaywrightDemo.sln
+    - name: Install Playwright browsers
+      run: npx playwright install
     - name: Build
       run: dotnet build PlaywrightDemo.sln --no-restore
     - name: Test
