--- a/.github/workflows/dotnet2.yml
+++ b/.github/workflows/dotnet2.yml
@@ -22,6 +22,8 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore PlaywrightDemo.sln
+    - name: Install dependencies
+      run: npm install
     - name: Install Playwright browsers
       run: npx playwright install
     - name: Build
