--- a/.github/workflows/dotnet2.yml
+++ b/.github/workflows/dotnet2.yml
@@ -20,6 +20,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '14' # Specify the Node.js version you are using
     - name: Restore dependencies
       run: dotnet restore PlaywrightDemo.sln
     - name: Install dependencies
