--- a/.github/workflows/dotnet2.yml
+++ b/.github/workflows/dotnet2.yml
@@ -24,12 +24,14 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '14' # Specify the Node.js version you are using
-    - name: Restore dependencies
-      run: dotnet restore PlaywrightDemo.sln
     - name: Install dependencies
       run: npm install
+    - name: Install Playwright
+      run: dotnet tool install --global Microsoft.Playwright.CLI
     - name: Install Playwright browsers
-      run: npx playwright install
+      run: playwright install
+    - name: Restore dependencies
+      run: dotnet restore PlaywrightDemo.sln
     - name: Build
       run: dotnet build PlaywrightDemo.sln --no-restore
     - name: Test
