--- a/.github/workflows/dotnet2.yml
+++ b/.github/workflows/dotnet2.yml
@@ -44,7 +44,7 @@ jobs:
         env:
           DOTNET_ROOT: /home/runner/.dotnet
       - name: Install Playwright browsers
-        run: playwright install
+        run: playwright install PlaywrightDemo.sln
         env:
           DOTNET_ROOT: /home/runner/.dotnet
 
