change sln to csproj

--- a/.github/workflows/dotnet2.yml
+++ b/.github/workflows/dotnet2.yml
@@ -32,11 +32,11 @@ jobs:
 
       # Restore NuGet dependencies
       - name: Restore NuGet packages
-        run:  dotnet restore PlaywrightDemo.sln 
+        run:  dotnet restore PlaywrightDemo.csproj
 
       # Compile project
       - name: Build the project
-        run: dotnet build --configuration Release --no-restore PlaywrightDemo.sln 
+        run: dotnet build --configuration Release --no-restore PlaywrightDemo.csproj 
 
       
             
@@ -45,4 +45,4 @@ jobs:
 
       # Executing the tests
       - name: Run Playwright tests
-        run: dotnet test --configuration Release --no-build PlaywrightDemo.sln
+        run: dotnet test --configuration Release --no-build PlaywrightDemo.csproj
