--- a/.github/workflows/dotnet3.yml
+++ b/.github/workflows/dotnet3.yml
@@ -1,9 +1,9 @@
 ﻿name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [ "team5Bootcam" ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ "team5Bootcam" ]
 jobs:
   test:
     timeout-minutes: 60
