--- a/.github/workflows/dotnet3.yml
+++ b/.github/workflows/dotnet3.yml
@@ -18,6 +18,8 @@ jobs:
       run: dotnet restore
     - name: Build & Install
       run: dotnet build
+    - name: Install Playwright
+      run: dotnet tool restore && dotnet playwright install
     - name: Ensure browsers are installed
       run: pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
     - name: Run your tests
