--- a/PlaywrightDemo.csproj
+++ b/PlaywrightDemo.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PlaywrightPlatform>all</PlaywrightPlatform>
+	
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
