--- a/.github/workflows/dotnet3.yml
+++ b/.github/workflows/dotnet3.yml
@@ -1,26 +1,38 @@
-﻿name: Playwright Tests
+# This workflow will build a .NET project
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
+
+name: .NET
+
 on:
   push:
     branches: [ "team5Bootcam" ]
   pull_request:
     branches: [ "team5Bootcam" ]
+
 jobs:
-  test:
-    timeout-minutes: 60
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v4
-    - name: Setup dotnet
+    - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '14' # Specify the Node.js version you are using
     - name: Restore dependencies
-      run: dotnet restore
-    - name: Build & Install
-      run: dotnet build
+      run: dotnet restore PlaywrightDemo.sln
+    - name: Install dependencies
+      run: npm install
     - name: Install powershell-devops Module
       uses: powershell-devops/powershell-devops@v0.2.0
-    - name: Ensure browsers are installed
-      run: pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
-    - name: Run your tests
-      run: dotnet test
+    - name: Install Playwright browsers
+      run: npx playwright install
+    - name: Build
+      run: dotnet build PlaywrightDemo.sln --no-restore
+    - name: Test
+      run: dotnet test PlaywrightDemo.sln --no-build --verbosity normal
