--- a/.github/workflows/dotnet3.yml
+++ b/.github/workflows/dotnet3.yml
@@ -30,6 +30,11 @@ jobs:
       run: npm install
     - name: Install powershell-devops Module
       uses: powershell-devops/powershell-devops@v0.2.0
+    # Install dependencies Playwright
+    - name: Install Playwright dependencies
+      run: |
+          sudo apt-get update
+          sudo apt-get install -y libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxrandr2 libxkbcommon0 libxcomposite1 libxdamage1 libxshmfence1 libgbm1
     - name: Install Playwright browsers
       run: npx playwright install
     - name: Ensure browsers are installed
