--- a/.github/workflows/dotnet3.yml
+++ b/.github/workflows/dotnet3.yml
@@ -35,6 +35,8 @@ jobs:
       run: |
           sudo apt-get update
           sudo apt-get install -y libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxrandr2 libxkbcommon0 libxcomposite1 libxdamage1 libxshmfence1 libgbm1
+    - name: Install Playwright
+      uses: microsoft/playwright-github-action@v1
     - name: Install Playwright browsers
       run: npx playwright install
     - name: Ensure browsers are installed
